            
    o   ?transform and example(transform) has been fixed and embelished, #2316.
        Thanks to Garrett See's suggestion.
        
    o   ?setattr has been updated to document that it takes any input, not just data.table, and
        can be used on columns of a data.frame, for example.
            
THANKS TO BETA TESTING (bugs caught in 1.8.3 before release to CRAN)

    o   Combining a join with mult="first"|"last" followed by by inside the same [...] gave incorrect
        results or a crash, #2303. Many thanks to Garrett See for the reproducible example and
        pinpointing in advance which commit had caused the problem. Tests added.
        
    o   Examples in ?data.table have been updated now that := no longer prints. Thanks to Garrett See.

NOTES

    o   There are now 856 raw tests. test.data.table() should return precisely this number of
        tests passed. If not, then somehow, a slightly stale version from R-Forge is likely
        installed; please reinstall from CRAN.

    o   v1.8.3 was an R-Forge only beta release. v1.8.4 was released to CRAN.
    

        **********************************************
        **                                          **
        **   CHANGES IN DATA.TABLE VERSION 1.8.2    **
        **                                          **
        **********************************************

NEW FEATURES

    o   Numeric columns (type 'double') are now allowed in keys and ad hoc
        by. J() and SJ() no longer coerce 'double' to 'integer'. i join columns
        which mismatch on numeric type are coerced silently to match
        the type of x's join column. Two floating point values
        are considered equal (by grouping and binary search joins) if their
        difference is within sqrt(.Machine$double.eps), by default. See example
        in ?unique.data.table. Completes FRs #951, #1609 and #1075. This paves the